# backend/internal/handlers/deacon_handler.go
@@ -48,47 +48,6 @@ func (deaconHandler *DeaconHandler) GetDeacon(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
-// GetServiceHistory @Summary Get All Services done by a deacon
-// @Description Get All Services done by a deacon
-// @Security BearerAuth
-// @Tags Deacons
-// @Produce json
-// @Param id path int true "Deacon ID"
-// @Success 200 {object} []db.GetHistoryServiceByDeaconIdRow
-// @Failure 400
-// @Failure 500
-// @Router /deacons/{id}/history [get]
-func (deaconHandler *DeaconHandler) GetServiceHistory(c *gin.Context) {
-	deaconIdString := c.Param("id")
-	if deaconIdString == "" {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "empty deacon id"})
-		return
-	}
-	deaconId, err := strconv.ParseInt(deaconIdString, 10, 64)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": fmt.Sprintf("cannot parse deacon id: {%s}", deaconIdString)})
-		return
-	}
-	pageStr := c.DefaultQuery("page", "1")
-	limitStr := c.DefaultQuery("limit", "10")
-	page, err := strconv.Atoi(pageStr)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Sprintf("cannot page: {%s}", pageStr)})
-		return
-	}
-	limit, err := strconv.Atoi(limitStr)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Sprintf("cannot parse page limit {%s}", limitStr)})
-		return
-	}
-	response, err := deaconHandler.Service.GetServiceHistory(c.Request.Context(), middleware.GetQueries(c), db.GetHistoryServiceByDeaconIdParams{DeaconID: deaconId, Offset: int32((page - 1) * limit), Limit: int32(limit)})
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	c.JSON(http.StatusOK, response)
-}
-
 // GetDeacons @Summary Lists All Deacons
 // @Description Lists All Deacons Paginated
 // @Security BearerAuth
