# backend/internal/models/attendance_history.sql.go
@@ -1,0 +1,99 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+// source: attendance_history.sql
+
+package db
+
+import (
+	"context"
+	"time"
+)
+
+const addHistoryService = `-- name: AddHistoryService :exec
+INSERT INTO deacons.deacons.attendances (deacon_id, event_skill_liturgy_id, date) Values($1,$2,$3)
+`
+
+type AddHistoryServiceParams struct {
+	DeaconID            int64
+	EventSkillLiturgyID int32
+	Date                time.Time
+}
+
+func (q *Queries) AddHistoryService(ctx context.Context, arg AddHistoryServiceParams) error {
+	_, err := q.db.ExecContext(ctx, addHistoryService, arg.DeaconID, arg.EventSkillLiturgyID, arg.Date)
+	return err
+}
+
+const deleteHistoryService = `-- name: DeleteHistoryService :exec
+DELETE from deacons.deacons.attendances WHERE deacon_id= $1 and event_skill_liturgy_id= $2 and date=$3
+`
+
+type DeleteHistoryServiceParams struct {
+	DeaconID            int64
+	EventSkillLiturgyID int32
+	Date                time.Time
+}
+
+func (q *Queries) DeleteHistoryService(ctx context.Context, arg DeleteHistoryServiceParams) error {
+	_, err := q.db.ExecContext(ctx, deleteHistoryService, arg.DeaconID, arg.EventSkillLiturgyID, arg.Date)
+	return err
+}
+
+const getHistoryServiceByDeaconId = `-- name: GetHistoryServiceByDeaconId :many
+SELECT
+    skl.skill,
+    evnt.event_name,
+    lit.liturgy_name,
+    att.date
+FROM deacons.deacons.attendances att
+         Join deacons.deacons.event_skill_liturgy esl on att.event_skill_liturgy_id = esl.id
+         Join deacons.deacons.liturgies lit on esl.liturgy_id = lit.id
+         Join deacons.deacons.events evnt on esl.event_id = evnt.id
+         Join deacons.deacons.skills skl on esl.skill_id = skl.id
+WHERE att.deacon_id = $1
+ORDER BY att.date DESC
+OFFSET $2
+    LIMIT $3
+`
+
+type GetHistoryServiceByDeaconIdParams struct {
+	DeaconID int64
+	Offset   int32
+	Limit    int32
+}
+
+type GetHistoryServiceByDeaconIdRow struct {
+	Skill       string
+	EventName   string
+	LiturgyName string
+	Date        time.Time
+}
+
+func (q *Queries) GetHistoryServiceByDeaconId(ctx context.Context, arg GetHistoryServiceByDeaconIdParams) ([]GetHistoryServiceByDeaconIdRow, error) {
+	rows, err := q.db.QueryContext(ctx, getHistoryServiceByDeaconId, arg.DeaconID, arg.Offset, arg.Limit)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetHistoryServiceByDeaconIdRow
+	for rows.Next() {
+		var i GetHistoryServiceByDeaconIdRow
+		if err := rows.Scan(
+			&i.Skill,
+			&i.EventName,
+			&i.LiturgyName,
+			&i.Date,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
