# backend/internal/models/deacon.sql.go
@@ -8,7 +8,6 @@ package db
 import (
 	"context"
 	"database/sql"
-	"time"
 )
 
 const createDeacon = `-- name: CreateDeacon :one
@@ -131,64 +130,6 @@ func (q *Queries) GetDeaconSkillById(ctx context.Context, deaconID int64) ([]Get
 	for rows.Next() {
 		var i GetDeaconSkillByIdRow
 		if err := rows.Scan(&i.ID, &i.Skill, &i.Score); err != nil {
-			return nil, err
-		}
-		items = append(items, i)
-	}
-	if err := rows.Close(); err != nil {
-		return nil, err
-	}
-	if err := rows.Err(); err != nil {
-		return nil, err
-	}
-	return items, nil
-}
-
-const getHistoryServiceByDeaconId = `-- name: GetHistoryServiceByDeaconId :many
-SELECT
-    skl.skill,
-    evnt.event_name,
-    lit.liturgy_name,
-    att.date
-FROM deacons.deacons.attendances att
-         Join deacons.deacons.event_skill_liturgy esl on att.event_skill_liturgy_id = esl.id
-         Join deacons.deacons.liturgies lit on esl.liturgy_id = lit.id
-         Join deacons.deacons.events evnt on esl.event_id = evnt.id
-         Join deacons.deacons.skills skl on esl.skill_id = skl.id
-WHERE att.deacon_id = $1
-ORDER BY att.date DESC
-OFFSET $2
-LIMIT $3
-`
-
-type GetHistoryServiceByDeaconIdParams struct {
-	DeaconID int64
-	Offset   int32
-	Limit    int32
-}
-
-type GetHistoryServiceByDeaconIdRow struct {
-	Skill       string
-	EventName   string
-	LiturgyName string
-	Date        time.Time
-}
-
-func (q *Queries) GetHistoryServiceByDeaconId(ctx context.Context, arg GetHistoryServiceByDeaconIdParams) ([]GetHistoryServiceByDeaconIdRow, error) {
-	rows, err := q.db.QueryContext(ctx, getHistoryServiceByDeaconId, arg.DeaconID, arg.Offset, arg.Limit)
-	if err != nil {
-		return nil, err
-	}
-	defer rows.Close()
-	var items []GetHistoryServiceByDeaconIdRow
-	for rows.Next() {
-		var i GetHistoryServiceByDeaconIdRow
-		if err := rows.Scan(
-			&i.Skill,
-			&i.EventName,
-			&i.LiturgyName,
-			&i.Date,
-		); err != nil {
 			return nil, err
 		}
 		items = append(items, i)
